Fixed Coverage Listing Overlap

--- a/src/components/coverage-viewer/file-selector/FileSelector.scss
+++ b/src/components/coverage-viewer/file-selector/FileSelector.scss
@@ -1,7 +1,6 @@
 .FileSelector {
     &-entry {
         padding-left: 20px;
-        height: 24px;
         line-height: 24px;
         user-select: none;
         cursor: pointer;
